@@ -13,12 +13,12 @@ indshuffle <- function(x)
    y <- table(sample(1:N, n, replace = TRUE))
    out[names(out) %in% names(y)] <- y
    names(out) <- NULL
-   return(out)
+   out
 }
 bothshuffle <- function(x, y=1)
 {
     x[x!=0] <- indshuffle(x[x!=0] - y) + y
-    return(sample(x))
+    sample(x)
 }
     if (!identical(all.equal(m, round(m)), TRUE))
        stop("function accepts only integers (counts)")
@@ -167,5 +167,5 @@ bothshuffle <- function(x, y=1)
     attr(out, "burnin") <- burnin
     attr(out, "thin") <- thin
     class(out) <- c("permatswap", "permat")
-    return(out)
+    out
 }
