@@ -7,6 +7,10 @@ Version 1.18-23 (opened February 16, 2011)
 
 	* opened with the release of 1.17-7 based on version 1.18-22 on
 	February 16, 2011.
+
+	* does not use unnecessary return() plus other stylistic
+	twitches. This touches 24 functions, but users should see no
+	difference. 
 	
 Version 1.18-22 (closed February 16, 2011)
 
